--- a/views/bookinstance_list.ejs
+++ b/views/bookinstance_list.ejs
@@ -1,12 +1,21 @@
 <%- include("_header") %>
 <h1><%= title %></h1>
 <ul>
-  <% if (bookinstance_list.length > 0) {bookinstance_list.forEach((copy) => { %>
-  <li>
-    <a href="<%= copy.url %>"><%= copy.book.title %> : <%= copy.imprint %></a>
-  </li>
-  <% })} else { %>
-  <li>There are no book copies in this library.</li>
-  <% } %>
+	<% if (bookinstance_list.length > 0) {bookinstance_list.forEach((copy) => { %>
+	<li>
+		<a href="<%= copy.url %>"><%= copy.book.title %> : <%= copy.imprint %></a>
+		- <% if (copy.status === "Available") { %>
+		<span class="text-success"><%= copy.status %></span>
+		<% } else if (copy.status === "Maintenance") { %>
+		<span class="text-danger"><%= copy.status %></span>
+		<% } else { %>
+		<span class="text-warning"><%= copy.status %></span>
+		<% } if (copy.status !== "Available") { %>
+		<span>(Due: <%= copy.due_back %> )</span>
+		<% } %>
+	</li>
+	<% })} else { %>
+	<li>There are no book copies in this library.</li>
+	<% } %>
 </ul>
 <%- include("_footer") %>
