--- a/views/author_detail.ejs
+++ b/views/author_detail.ejs
@@ -1,6 +1,6 @@
 <%- include("_header") %>
 <h1>Author: <%= author.name %></h1>
-<p><%= author.date_of_birth %> - <%= author.date_of_death %></p>
+<p><%= author.lifespan %></p>
 <div style="margin: 20px 0 0 20px">
 	<h4>Books</h4>
 	<dl>
