--- a/views/author_list.ejs
+++ b/views/author_list.ejs
@@ -1,13 +1,12 @@
 <%- include("_header") %>
 <h1><%= title %></h1>
 <ul>
-  <% if (author_list.length > 0) { author_list.forEach(function(author) { %>
-  <li>
-    <a href="<%= author.url %>"><%= author.name %></a> (<%=
-    author.date_of_birth_formatted %> - <%= author.date_of_death_formatted %>)
-  </li>
-  <% })} else { %>
-  <li>there are no authors.</li>
-  <% } %>
+	<% if (author_list.length > 0) { author_list.forEach(function(author) { %>
+	<li>
+		<a href="<%= author.url %>"><%= author.name %></a> (<%= author.lifespan %>)
+	</li>
+	<% })} else { %>
+	<li>there are no authors.</li>
+	<% } %>
 </ul>
 <%- include("_footer") %>
