--- a/views/book_form.ejs
+++ b/views/book_form.ejs
@@ -16,7 +16,7 @@
     />
   </div>
   <div class="form-group">
-    <label for="author" class="form-label"></label>
+    <label for="author" class="form-label">Author:</label>
     <select
       name="author"
       id="author"
