--- a/views/genre_detail.ejs
+++ b/views/genre_detail.ejs
@@ -1,14 +1,16 @@
 <%- include("_header") %>
 <h1>Genre: <%= genre.name %></h1>
 <div style="margin: 20px 0 0 20px">
-	<h4>Books</h4>
-	<dl>
-		<% if (genre_books.length > 0) {genre_books.forEach(book => { %>
-		<dt><a href="<%= book.url %>"><%= book.title %></a></dt>
-		<dd><%= book.summary %></dd>
-		<% })} else { %>
-		<p>This genre has no books.</p>
-		<% } %>
-	</dl>
+  <h4>Books</h4>
+  <dl>
+    <% if (genre_books.length > 0) {genre_books.forEach(book => { %>
+    <dt><a href="<%= book.url %>"><%= book.title %></a></dt>
+    <dd><%= book.summary %></dd>
+    <% })} else { %>
+    <p>This genre has no books.</p>
+    <% } %>
+  </dl>
 </div>
+<hr />
+<p><a href="<%= genre.url %>/delete">Delete genre</a></p>
 <%- include("_footer") %>
