--- a/views/book_detail.ejs
+++ b/views/book_detail.ejs
@@ -34,4 +34,5 @@
 </div>
 <hr />
 <p><a href="<%= book.url %>/delete">Delete book</a></p>
+<p><a href="<%= book.url %>/update">Update book</a></p>
 <%- include("_footer") %>
