--- a/views/book_form.ejs
+++ b/views/book_form.ejs
@@ -10,7 +10,7 @@
       required
       id="title"
       class="form-control"
-      value="<% 
+      value="<%- 
         book === undefined ? '' : book.title
        %>"
     />
@@ -30,7 +30,7 @@
       { %>
       <option
         value="<%= author._id %>"
-        selected="<% author._id.toString()===book.author._id.toString() ? 'selected' : false %>"
+        selected="<% author._id.toString()===book.author._id.toString() || author._id.toString()==book.author ? 'selected' : false %>"
       >
         <%= author.name %>
       </option>
@@ -48,7 +48,7 @@
       class="form-control"
       required
     >
-      <% book === undefined ? '' : book.summary %>
+      <%- book === undefined ? '' : book.summary %>
     </textarea>
   </div>
   <div class="form-group">
@@ -59,7 +59,7 @@
       class="form-control"
       placeholder="ISBN13"
       name="isbn"
-      value="<% book === undefined ? '' : book.isbn %>"
+      value="<%- book === undefined ? '' : book.isbn %>"
       required
     />
   </div>
