--- a/views/author_detail.ejs
+++ b/views/author_detail.ejs
@@ -2,16 +2,17 @@
 <h1>Author: <%= author.name %></h1>
 <p><%= author.lifespan %></p>
 <div style="margin: 20px 0 0 20px">
-  <h4>Books</h4>
-  <dl>
-    <% if (author_books.length > 0) { author_books.forEach((book) => { %>
-    <dt><a href="<%= book.url %> "><%= book.title %> </a></dt>
-    <dd><%= book.summary %></dd>
-    <% }) } else { %>
-    <p>This author has no books.</p>
-    <% } %>
-  </dl>
+	<h4>Books</h4>
+	<dl>
+		<% if (author_books.length > 0) { author_books.forEach((book) => { %>
+		<dt><a href="<%= book.url %> "><%= book.title %> </a></dt>
+		<dd><%= book.summary %></dd>
+		<% }) } else { %>
+		<p>This author has no books.</p>
+		<% } %>
+	</dl>
 </div>
 <hr />
 <p><a href="<%= author.url %>/delete">Delete author</a></p>
+<p><a href="<%= author.url %>/update">Update author</a></p>
 <%- include("_footer") %>
