--- a/views/bookinstance_form.ejs
+++ b/views/bookinstance_form.ejs
@@ -1,63 +1,63 @@
 <%- include("_header") %>
 <h1><%= title %></h1>
 <form action="" method="POST">
-	<div class="form-group">
-		<label for="book" class="form-label">Book:</label>
-		<select
-			name="book"
-			id="book"
-			placeholder="Select book"
-			class="form-control"
-			required
-		>
-			<% book_list.sort(function(a, b) { let textA = a.title.toUpperCase(); let
-			textB = b.title.toUpperCase(); return (textA < textB) ? -1 : (textA >
-			textB) ? 1 : 0; }); book_list.forEach(function(book) { if
-			(book._id.toString() === selected_book) { %>
-			<option value="<%= book._id %>" selected><%= book.title %></option>
-			<% } else { %>
-			<option value="<%= book._id %>"><%= book.title %></option>
-			<% }}) %>
-		</select>
-	</div>
-	<div class="form-group">
-		<label for="imprint">Imprint:</label>
-		<input
-			name="imprint"
-			placeholder="Publisher and date information"
-			id="imprint"
-			class="form-control"
-			required
-			value="<% bookinstance === undefined ? '' : bookinstance.imprint %>"
-		/>
-	</div>
-	<div class="form-group">
-		<label for="due_back">Date when book available:</label>
-		<input
-			type="date"
-			id="due_back"
-			class="form-control"
-			name="due_back"
-			value="<% bookinstance === undefined ? '' : bookinstance.due_back %>"
-		/>
-	</div>
-	<div class="form-group">
-		<label for="status">Status:</label>
-		<select
-			type="select"
-			name="status"
-			placeholder="Select status"
-			id="status"
-			class="form-control"
-			required
-		>
-			<option value="Maintenance">Maintenance</option>
-			<option value="Available">Available</option>
-			<option value="Loaned">Loaned</option>
-			<option value="Reserved">Reserved</option>
-		</select>
-	</div>
+  <div class="form-group">
+    <label for="book" class="form-label">Book:</label>
+    <select
+      name="book"
+      id="book"
+      placeholder="Select book"
+      class="form-control"
+      required
+    >
+      <% book_list.sort(function(a, b) { let textA = a.title.toUpperCase(); let
+      textB = b.title.toUpperCase(); return (textA < textB) ? -1 : (textA >
+      textB) ? 1 : 0; }); book_list.forEach(function(book) { if
+      (book._id.toString() === selected_book) { %>
+      <option value="<%= book._id %>" selected><%= book.title %></option>
+      <% } else { %>
+      <option value="<%= book._id %>"><%= book.title %></option>
+      <% }}) %>
+    </select>
+  </div>
+  <div class="form-group">
+    <label for="imprint">Imprint:</label>
+    <input
+      name="imprint"
+      placeholder="Publisher and date information"
+      id="imprint"
+      class="form-control"
+      required
+      value="<%- bookinstance === undefined ? '' : bookinstance.imprint %>"
+    />
+  </div>
+  <div class="form-group">
+    <label for="due_back">Date when book available:</label>
+    <input
+      type="date"
+      id="due_back"
+      class="form-control"
+      name="due_back"
+      value="<%- bookinstance === undefined ? '' : bookinstance.due_back_value %>"
+    />
+  </div>
+  <div class="form-group">
+    <label for="status">Status:</label>
+    <select
+      type="select"
+      name="status"
+      placeholder="Select status"
+      id="status"
+      class="form-control"
+      required
+    >
+      <option value="Maintenance">Maintenance</option>
+      <option value="Available">Available</option>
+      <option value="Loaned">Loaned</option>
+      <option value="Reserved">Reserved</option>
+    </select>
+  </div>
 
-	<button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 <%- include("_formerrors") %><%- include("_footer") %>
